<resources>
    <string name="app_name" translatable="false">ScandroidX</string>
    <string name="scanner">Scanner</string>
    <string name="scan_image">Scan image</string>
    <string name="history">History</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="favorite">Is favorite</string>
    <string name="delete_question_dialog">Do you want to remove this code from your scan history?</string>
    <string name="delete_question_dialog_title">Deletion</string>
    <string name="delete_dialog_delete_button">Delete</string>
    <string name="delete_dialog_cancel_button">Cancel</string>
    <string name="delete_all_question_dialog">Delete history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="scan">Scan</string>
    <string name="scan_result_from_image">Found %s: %s</string>
    <string name="nothing_found">Nothing found</string>

    <string name="save_settings_disabled_message">You have disabled saving the scan history to the database \nYou can enable saving in the "Settings" menu</string>
    <string name="the_list_is_empty_message">The list is empty</string>
    
    <string name="detected">Detected:</string>
    <string name="scan_image_hint">Move the markers to refine the scanned area.</string>

    <string name="barcode_format">Format:</string>
    <string name="barcode_type">Type:</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="barcode_copied">Copied to clipboard</string>
    <string name="barcode_search">Search on the internet</string>
    <string name="barcode_search_on_list">Search on the list</string>
    <string name="barcode_share_text">Share as text</string>

    <!--Settings-->
    <string name="fragment_settings_vibrate">Vibrate</string>
    <string name="fragment_settings_vibrate_hint">Vibrate on scan</string>
    <string name="fragment_settings_flash">Flash</string>
    <string name="fragment_settings_flash_hint">Enable flash on start</string>
    <string name="fragment_settings_save_scanned_barcodes_to_history">Save</string>
    <string name="fragment_settings_save_scanned_barcodes_to_history_hint">Save scanned barcodes to history</string>
    <string name="fragment_settings_sending_note">Sending a note</string>
    <string name="fragment_settings_sending_note_hint">Send note along with code text in message</string>

    <!--Barcode formats-->
    <string name="barcode_format_aztec" translatable="false">Aztec</string>
    <string name="barcode_format_codabar" translatable="false">Codabar</string>
    <string name="barcode_format_code_39" translatable="false">Code 39</string>
    <string name="barcode_format_code_93" translatable="false">Code 93</string>
    <string name="barcode_format_code_128" translatable="false">Code 128</string>
    <string name="barcode_format_data_matrix" translatable="false">Data Matrix</string>
    <string name="barcode_format_ean_8" translatable="false">EAN-8</string>
    <string name="barcode_format_ean_13" translatable="false">EAN-13</string>
    <string name="barcode_format_itf" translatable="false">ITF</string>
    <string name="barcode_format_pdf_417" translatable="false">PDF417</string>
    <string name="barcode_format_qr_code">QR Code</string>
    <string name="barcode_format_UPC_A" translatable="false">UPC-A</string>
    <string name="barcode_format_UPC_E" translatable="false">UPC-E</string>
    <string name="barcode_format_unknown">Unknown Format</string>

    <!--Barcode types-->
    <string name="barcode_type_contact_info">Contact</string>
    <string name="barcode_type_unknown">Unknown Type</string>
    <string name="barcode_type_email" translatable="false">Email</string>
    <string name="barcode_type_isbn" translatable="false">Isbn</string>
    <string name="barcode_type_phone">Phone</string>
    <string name="barcode_type_product">Product</string>
    <string name="barcode_type_sms">SMS</string>
    <string name="barcode_type_text">Text</string>
    <string name="barcode_type_url" translatable="false">URL</string>
    <string name="barcode_type_wifi" translatable="false">Wi-Fi</string>
    <string name="barcode_type_geo">Location</string>
    <string name="barcode_type_calendar_event">Event</string>
    <string name="barcode_driver_license">Driver license</string>

    <string name="details">Details</string>

</resources>