<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayoutStyle">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolbarStyle"
                app:title="@string/settings"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvVibrate"
                style="@style/DefaultTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/fragment_settings_vibrate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvVibrateHint"
                style="@style/SecondaryTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/fragment_settings_vibrate_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVibrate" />

            <Switch
                android:id="@+id/swVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="15dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/viewVibrate"
                style="@style/LineViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVibrateHint"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tvFlash"
                style="@style/DefaultTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/fragment_settings_flash"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewVibrate" />

            <TextView
                android:id="@+id/tvFlashHint"
                style="@style/SecondaryTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/fragment_settings_flash_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFlash" />

            <Switch
                android:id="@+id/swFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewVibrate"
                android:layout_margin="15dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/viewFlash"
                style="@style/LineViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFlashHint"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tvSave"
                style="@style/DefaultTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/fragment_settings_save_scanned_barcodes_to_history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewFlash" />

            <TextView
                android:id="@+id/tvSaveHint"
                style="@style/SecondaryTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/fragment_settings_save_scanned_barcodes_to_history_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSave" />

            <Switch
                android:id="@+id/swSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewFlash"
                android:layout_margin="15dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/viewSave"
                style="@style/LineViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSaveHint"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tvSendingNote"
                style="@style/DefaultTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/fragment_settings_sending_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewSave" />

            <TextView
                android:id="@+id/tvSendingNoteHint"
                style="@style/SecondaryTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/fragment_settings_sending_note_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSendingNote" />

            <Switch
                android:id="@+id/swSendNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewSave"
                android:layout_margin="15dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                style="@style/LineViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSendingNoteHint"
                android:layout_margin="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>